# platform-contensis-management

./: .gitignore  .pre-commit-config.yaml  .sourcery.yml  Makefile  README.md  pyproject.toml  requirements.dev.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: release.yml  run-all-tests.yml
src/contensis_managment/: api_client.py
tests/: dummy_test.py
